// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sampleChatStringToMessages should properly convert <START> (case insensitive) and split basic messages 1`] = `
Array [
  Object {
    "content": "New conversation started. Previous conversations are examples only.",
    "role": "system",
  },
  Object {
    "content": "Sam: hey there Vader!",
    "role": "user",
  },
  Object {
    "content": "Vader: hi Sam!",
    "role": "assistant",
  },
]
`;

exports[`sampleChatStringToMessages should properly understand the first conversation even if it doesnt begin with <START> 1`] = `
Array [
  Object {
    "content": "Sam: hey there",
    "role": "user",
  },
  Object {
    "content": "Vader: hi!",
    "role": "assistant",
  },
]
`;

exports[`sampleChatStringToMessages should understand that strings written after <START>, up until the first name+colon, should be a system message. 1`] = `
Array [
  Object {
    "content": "Sam: hey",
    "role": "user",
  },
  Object {
    "content": "Vader: hi!",
    "role": "assistant",
  },
  Object {
    "content": "New conversation started. Previous conversations are examples only.",
    "role": "system",
  },
  Object {
    "content": "test",
    "role": "system",
  },
  Object {
    "content": "Vader: bye Sam",
    "role": "assistant",
  },
  Object {
    "content": "Sam: byebye Vader",
    "role": "user",
  },
  Object {
    "content": "Vader: I love you Sam",
    "role": "assistant",
  },
  Object {
    "content": "Sam: me too Vader
Vader is very violent.",
    "role": "user",
  },
]
`;

exports[`sampleChatStringToMessages should understand when multiple <Start> are used in the sample chat and turn them all into the defined System message saying a new conversation has started 1`] = `
Array [
  Object {
    "content": "Vader is nice.",
    "role": "system",
  },
  Object {
    "content": "New conversation started. Previous conversations are examples only.",
    "role": "system",
  },
  Object {
    "content": "Sam: hey",
    "role": "user",
  },
  Object {
    "content": "Vader: hi!",
    "role": "assistant",
  },
  Object {
    "content": "New conversation started. Previous conversations are examples only.",
    "role": "system",
  },
  Object {
    "content": "Vader: bye Sam",
    "role": "assistant",
  },
  Object {
    "content": "Sam: byebye Vader",
    "role": "user",
  },
]
`;

exports[`sampleChatStringToMessages should, if the sampleChat string doesnt begin with a name+colon, interpret everything up to the first name+colon (or <start>) as a system message 1`] = `
Array [
  Object {
    "content": "Vader is nice.",
    "role": "system",
  },
  Object {
    "content": "Sam: hey",
    "role": "user",
  },
  Object {
    "content": "Vader: hi!",
    "role": "assistant",
  },
]
`;

exports[`sampleChatStringToMessages should, if the sampleChat string doesnt begin with a name+colon, interpret everything up to the first name+colon (or <start>) as a system message 2`] = `
Array [
  Object {
    "content": "Vader is nice.",
    "role": "system",
  },
  Object {
    "content": "New conversation started. Previous conversations are examples only.",
    "role": "system",
  },
  Object {
    "content": "Sam: hey",
    "role": "user",
  },
  Object {
    "content": "Vader: hi!",
    "role": "assistant",
  },
]
`;
